// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text-input [snapshot] > disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-default"
>
  <div
    class="vesper-text-input-field-wrapper"
  >
    <input
      class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
      disabled=""
      id="_r_1r_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`text-input [snapshot] > full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-error"
>
  <div
    class="vesper-text-input-label-wrapper"
  >
    <label
      class="vesper-typography vesper-typography-label-sm vesper-text-input-label"
      for="_r_1t_"
    >
      Label text
    </label>
    <div
      class="vesper-text-input-field-wrapper"
    >
      <input
        aria-describedby="_r_1s_"
        class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
        disabled=""
        id="_r_1t_"
        placeholder=" "
        type="text"
      />
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-error"
    data-message="true"
    id="_r_1s_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M21 8V16L16 21H8L3 16V8L8 3H16L21 8ZM11.4932 15.2422L10.9766 15.7578V16.7881L11.4932 17.3027H12.5264L13.042 16.7881V15.7578L12.5264 15.2422H11.4932ZM11.2354 7L10.7188 7.51562L11.2354 13.6973L11.751 14.2119H12.2676L12.7842 13.6973L13.3008 7.51562L12.7842 7H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`text-input [snapshot] > size: lg 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-default"
>
  <div
    class="vesper-text-input-field-wrapper"
  >
    <input
      class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
      id="_r_1l_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`text-input [snapshot] > size: md 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-default"
>
  <div
    class="vesper-text-input-field-wrapper"
  >
    <input
      class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
      id="_r_1j_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`text-input [snapshot] > size: sm 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-default"
>
  <div
    class="vesper-text-input-field-wrapper"
  >
    <input
      class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
      id="_r_1h_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`text-input [snapshot] > variant: default 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-default"
>
  <div
    class="vesper-text-input-field-wrapper"
  >
    <input
      aria-describedby="_r_18_"
      class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
      id="_r_19_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="true"
    id="_r_18_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M18.1582 3L21 5.8418V18.1582L18.1582 21H5.8418L3 18.1582V5.8418L5.8418 3H18.1582ZM11.4941 9.97461L10.9873 10.4814V16.5566L11.4941 17.0625H12.5059L13.0127 16.5566V10.4814L12.5059 9.97461H11.4941ZM11.4941 6.9375L10.9873 7.44336V8.45605L11.4941 8.96289H12.5059L13.0127 8.45605V7.44336L12.5059 6.9375H11.4941Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`text-input [snapshot] > variant: error 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-error"
>
  <div
    class="vesper-text-input-field-wrapper"
  >
    <input
      aria-describedby="_r_1e_"
      class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
      id="_r_1f_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-error"
    data-message="true"
    id="_r_1e_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M21 8V16L16 21H8L3 16V8L8 3H16L21 8ZM11.4932 15.2422L10.9766 15.7578V16.7881L11.4932 17.3027H12.5264L13.042 16.7881V15.7578L12.5264 15.2422H11.4932ZM11.2354 7L10.7188 7.51562L11.2354 13.6973L11.751 14.2119H12.2676L12.7842 13.6973L13.3008 7.51562L12.7842 7H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`text-input [snapshot] > variant: success 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-success"
>
  <div
    class="vesper-text-input-field-wrapper"
  >
    <input
      aria-describedby="_r_1c_"
      class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
      id="_r_1d_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-success"
    data-message="true"
    id="_r_1c_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM16.2402 8.2959L9.79102 14.4355H9.7793L7.75977 12.5127L7.58691 12.3486L7.41504 12.5127L6.82715 13.0713L6.6377 13.252L6.82715 13.4336L9.16406 15.6572L9.23633 15.7266H10.334L10.4062 15.6572L17.1729 9.2168L17.3623 9.03516L17.1729 8.85449L16.585 8.2959L16.4131 8.13184L16.2402 8.2959Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`text-input [snapshot] > variant: warning 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-warning"
>
  <div
    class="vesper-text-input-field-wrapper"
  >
    <input
      aria-describedby="_r_1a_"
      class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
      id="_r_1b_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-warning"
    data-message="true"
    id="_r_1a_"
  >
    <span
      aria-hidden="true"
      class="vesper-form-input-message-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M22 18.5537L20.876 20.5H3.10352L2 18.5898L10.9658 3.5H13.0557L22 18.5537ZM11.4932 16.2422L10.9766 16.7578V17.7881L11.4932 18.3027H12.5264L13.042 17.7881V16.7578L12.5264 16.2422H11.4932ZM11.2354 8L10.7188 8.51562L11.2354 14.6973L11.751 15.2119H12.2676L12.7842 14.6973L13.3008 8.51562L12.7842 8H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="vesper-typography vesper-typography-label-xs vesper-form-input-message-text"
    >
      Message text
    </span>
  </output>
</div>
`;

exports[`text-input [snapshot] > with icon 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-default"
>
  <div
    class="vesper-text-input-field-wrapper"
  >
    <span
      class="vesper-text-input-icon"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M21 9V15L16 21H8L3 15V9L8 3H16L21 9ZM8.43652 20H9.25684L7.53711 15.7676L7.5 15.6768V15.5H4.8291L8.43652 20ZM16.5 15.6768L16.4629 15.7676L14.7432 20H15.5635L19.1709 15.5H16.5V15.6768ZM10.3359 20H13.6641L15.4932 15.5H8.50781L10.3359 20ZM4 14.5H7.5V9.5H4V14.5ZM16.5 14.5H20V9.5H16.5V14.5ZM8.5 14.5H15.5V9.5H8.5V14.5ZM4.71875 8.5H7.5V8.32324L7.53711 8.23242L9.25684 4H8.46875L4.71875 8.5ZM16.4629 8.23242L16.5 8.32324V8.5H19.2812L15.5312 4H14.7432L16.4629 8.23242ZM8.50684 8.5H15.4922L13.6641 4H10.3359L8.50684 8.5Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <input
      class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
      id="_r_1n_"
      placeholder=" "
      type="text"
    />
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;

exports[`text-input [snapshot] > with label 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-default"
>
  <div
    class="vesper-text-input-label-wrapper"
  >
    <label
      class="vesper-typography vesper-typography-label-sm vesper-text-input-label"
      for="_r_1p_"
    >
      Label text
    </label>
    <div
      class="vesper-text-input-field-wrapper"
    >
      <input
        class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
        id="_r_1p_"
        placeholder=" "
        type="text"
      />
    </div>
  </div>
  <output
    class="vesper-form-input-message vesper-form-input-message-default"
    data-message="false"
  />
</div>
`;
